--- a/VehicleGrabberCore/VehicleGrabberCore.csproj
+++ b/VehicleGrabberCore/VehicleGrabberCore.csproj
@@ -8,12 +8,27 @@
     <PackageReference Include="FileHelpers" Version="3.3.0" />
     <PackageReference Include="FileHelpers.Analyzer" Version="1.1.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.8.5" />
-    <PackageReference Include="linq2db.MySql" Version="2.1.0" />
-    <PackageReference Include="MySql.Data" Version="8.0.11" />
+    <PackageReference Include="linq2db.MySql" Version="2.2.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.12" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="DataModel\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
